better align page elements and fix graph tooltip error

--- a/app/cdash/public/css/d3.dependencyedgebundling.css
+++ b/app/cdash/public/css/d3.dependencyedgebundling.css
@@ -79,7 +79,7 @@ div.tooltipTail {
     top: 12px;
     width: 7px;
     height: 13px;
-    background: url("../images/tail_white.png") 50% 0%;
+    background: url("../img/tail_white.png") 50% 0%;
 }
 
 div.toolTipBody {
